--- a/package.json
+++ b/package.json
@@ -5,9 +5,15 @@
   "repository": "https://github.com/brenorosado/rentx-api.git",
   "author": "brenorosado <brenorosado.cjr@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon",
+    "start": "ts-node --transpile-only src/server.ts"
+  },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.9",
     "prisma": "^4.5.0",
     "ts-node": "^10.9.1",
@@ -15,6 +21,10 @@
   },
   "dependencies": {
     "@prisma/client": "^4.5.0",
-    "cors": "^2.8.5"
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
+    "nodemon": "^2.0.20"
   }
 }
