added eslint and prettier configuration, and created tests for POST at /account

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
       "strict": true,
       "lib": ["esnext"],
       "esModuleInterop": true,
-      "resolveJsonModule": true
+      "resolveJsonModule": true,
+      "strictNullChecks": false
     }
   }
