--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "supertest": "^6.3.1",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.2",
     "typescript": "^4.8.4"
   },
   "dependencies": {
