--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,41 +1,21 @@
 {
-    "ts-node": {
-      "require": ["tsconfig-paths/register"]
-    },
-    "compilerOptions": {
-      "sourceMap": true,
-      "outDir": "dist",
-      "strict": true,
-      "lib": ["esnext"],
-      "esModuleInterop": true,
-      "resolveJsonModule": true,
-      "strictNullChecks": false,
-      "baseUrl": ".",
-      "paths": {
-        "@database/*": [
-          "src/database/*"
-        ],
-        "@repositories/*": [
-          "src/repositories/*"
-        ],
-        "@controllersTest/*": [
-          "src/controllers/*"
-        ],
-        "@services/*": [
-          "src/services/*"
-        ],
-        "@routes/*": [
-          "src/routes/*"
-        ],
-        "@errors/*": [
-          "src/errors/*"
-        ],
-        "@utils/*": [
-          "src/utils/*"
-        ],
-        "@middlewares/*": [
-          "src/middlewares/*"
-        ]
-      }
-    }
+  "compilerOptions": {
+    "module": "commonjs",
+    "declaration": true,
+    "removeComments": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
+    "target": "ES2021",
+    "sourceMap": true,
+    "outDir": "./dist",
+    "baseUrl": "./",
+    "incremental": true,
+    "skipLibCheck": true,
+    "strictNullChecks": false,
+    "noImplicitAny": false,
+    "strictBindCallApply": false,
+    "forceConsistentCasingInFileNames": false,
+    "noFallthroughCasesInSwitch": false
   }
+}
