--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "cookie-session": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.8",
     "prisma": "^5.7.1",
     "reflect-metadata": "^0.1.13",
